instance creation according to Java 9 gusto